# SWE-Projekt

./: .gitignore  CMakeLists.txt  LICENSE  LaserCutter.icns  LaserSim.pro  README.md  SWE-Lasercutter-Simulation.pro  SWE-Lasercutter-Simulation.pro.user.7797a78.18  SWE-Lasercutter-Simulation.pro.user.f035bd7.3.3-pre1  TestCode.txt  assets.qrc
Documentation/: UML.mdj
GUI/: Lasercutter.ui
Source/: LCSEngineState.cpp  LCSEngineState.h  LCSGridGraphicScene.cpp  LCSGridGraphicScene.h  LCSLaser.cpp  LCSLaser.h  LCSLaserState.cpp  LCSLaserState.h  LCSParser.cpp  LCSParser.h  LCSSyntaxHighlighter.cpp  LCSSyntaxHighlighter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SWE-Lasercutter-Simulation.pro  main.cpp
Source/Controller/: LCController.cpp  LCController.h
Source/Model/: LCLaser.cpp  LCLaser.h  LCParser.cpp  LCParser.h  LCState.cpp  LCState.h
Source/View/: LCGridGraphicScene.cpp  LCGridGraphicScene.h  LCSyntaxHighlighter.cpp  LCUserInterface.cpp  LCUserInterface.h
Test Files/: MoodleTest.txt  TestCode.txt
TestCodes/: Moodle Code.txt  MoodleTest.txt  Pikachu.txt  Relativ Viereck.txt  Syntax Test.txt  TestCode.txt  Toad.txt
src/: Laser.cpp  Laser.h  LaserState.cpp  LaserState.h  Parser.cpp  Parser.h  main.cpp
src/Controller/: LCController.cpp  LCController.h
src/Model/: LCCoordinate.cpp  LCCoordinate.h  LCParser.cpp  LCParser.h
src/View/: LCSyntaxHighlighter.h  LCUI_Base.h  LCUserInterface.cpp  LCUserInterface.h
